<resources>
    <string name="app_name">DEMESHI</string>
    <string name="IdHint">メールアドレスorユーザID</string>
    <string name="PasswordHint">パスワード</string>
    <string name="Phone">電話</string>
    <string name="Mail">メール</string>
    <string name="LastNameHint">姓</string>
    <string name="FirstNameHint">名</string>
    <string name="PhoneHint">電話番号</string>
    <string name="MailHint">メールアドレス</string>
    <string name="ConfPasswordHint">確認パスワード</string>
    <string name="RegisterBtn">登録</string>
    <string name="ForgetMailHint">再設定用メールアドレス</string>
    <string name="SendBtn">送信</string>
    <string name="LoginHint">ログイン</string>
    <string name="ForgotPassText">パスワードを忘れた場合</string>
    <string name="ConfRegisterText">確認メールを送信しました</string>
    <string name="ConfForgotText">再設定用のリンクを入力した\nメールアドレスに送信しました</string>
    <string name="MoveLogin">ログイン画面へ</string>
    <string name="NewPasswordHint">新しいパスワード</string>
    <string name="ReRegisterBtn">再登録</string>
    <string name="NewPassword">パスワードを再設定しました</string>
    <string name="NameHint">名前</string>
    <string name="CompanyHint">企業</string>
    <string name="BackHint">戻る</string>
    <string name="CreateBtnHint">作成</string>
    <string name="ChangeFontFamily">フォント変更</string>
    <string name="ChangeTextColor">文字色変更</string>
    <string name="ChangeFontSize">文字サイズ変更</string>
    <string name="Individual">個人</string>
    <string name="Company">企業</string>
    <string name="Address">住所</string>
    <string name="DeleteHint">削除</string>
    <string name="SettingName">Setting</string>
    <string name="UserConfigName">ユーザー設定</string>
    <string name="DeleteName">退会</string>
    <string name="ReConfigBtnText">変更する</string>
    <string name="mixer">企業用個人</string>
    <string name="AddressHint">住所</string>
    <string name="CompanyNameHint">企業名</string>
    <string name="CompanyId">企業ID</string>
    <string name="CompanyPass">企業パスワード</string>
    <string name="AddHint">名刺IDを入力してください</string>
    <string name="AddBtnHint">追加</string>
    <string name="sns">SNS</string>
</resources>