<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/simple_frame"

        android:ems="10"
        android:gravity="center"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailText" />

    <EditText
        android:id="@+id/MailText"
        android:layout_width="@dimen/TextBoxWidth"
        android:layout_height="@dimen/TextBoxHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/simple_frame"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/IdHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/LineView"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="@dimen/BtnWidth"
        android:layout_height="@dimen/BtnHeight"
        android:layout_marginTop="80dp"
        android:background="@color/ログイン"
        android:text="@string/LoginHint"
        android:textSize="@dimen/BtnTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LineView" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="@dimen/BtnWidth"
        android:layout_height="@dimen/BtnHeight"
        android:layout_marginTop="24dp"
        android:background="@color/TabColor"
        android:text="@string/RegisterBtn"
        android:textSize="@dimen/BtnTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <Button
        android:id="@+id/ForgotBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/ForgotPassText"
        android:textColor="#d4d1d1"
        android:textSize="@dimen/BtnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn" />

</android.support.constraint.ConstraintLayout>