<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReRegister">

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/simple_frame"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/NewPasswordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NewConfPassword"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/simple_frame"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ConfPasswordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPassword" />

    <Button
        android:id="@+id/ReRegisterBtn"
        android:layout_width="@dimen/BtnWidth"
        android:layout_height="@dimen/BtnHeight"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="8dp"
        android:background="#00F881"
        android:text="@string/ReRegisterBtn"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/BtnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewConfPassword"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>