<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCard">

    <ImageView
        android:id="@+id/BackDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="400dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simple_frame" />

    <EditText
        android:id="@+id/EditMail"
        android:layout_width="@dimen/CreateTextWidth"
        android:layout_height="@dimen/CreateTextHeight"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/MailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditPhone" />

    <EditText
        android:id="@+id/EditPhone"
        android:layout_width="@dimen/CreateTextWidth"
        android:layout_height="@dimen/CreateTextHeight"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/PhoneHint"
        android:inputType="phone"
        android:textSize="@dimen/CreateTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditName" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="@dimen/CreateTextWidth"
        android:layout_height="@dimen/CreateTextHeight"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        android:textSize="@dimen/CreateTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackDesign" />

    <Button
        android:id="@+id/CreateBtn"
        android:layout_width="@dimen/CreateBtnWidth"
        android:layout_height="@dimen/CreateBtnHeight"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/CreateBtnHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Back"
        android:layout_width="@dimen/BackBtnWidth"
        android:layout_height="@dimen/BackBtnHeight"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/BackHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name1"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="名前"
        android:textSize="@dimen/CreateTextSize"
        app:layout_constraintStart_toStartOf="@+id/BackDesign"
        app:layout_constraintTop_toTopOf="@+id/BackDesign" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:text="電話番号"
        android:textSize="@dimen/CreateTextSize"
        app:layout_constraintStart_toStartOf="@+id/Mail"
        app:layout_constraintTop_toBottomOf="@+id/Mail" />

    <TextView
        android:id="@+id/place"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:text="企業名"
        android:textSize="@dimen/CreateTextSize"
        app:layout_constraintStart_toStartOf="@+id/Name1"
        app:layout_constraintTop_toBottomOf="@+id/Name1" />

    <TextView
        android:id="@+id/Mail"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="メールアドレス"
        android:textSize="@dimen/CreateTextSize"
        app:layout_constraintEnd_toEndOf="@+id/BackDesign"
        app:layout_constraintTop_toTopOf="@+id/BackDesign" />

</android.support.constraint.ConstraintLayout>