<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowIndCompany">

    <ImageView
        android:id="@+id/MyCard1"
        android:layout_width="@dimen/MyCardWidth"
        android:layout_height="@dimen/MyCardHeight"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/meishi" />

    <TextView
        android:id="@+id/Name1"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginTop="40dp"
        android:hint="会社名"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyCard1"
        tools:text="名前" />

    <TextView
        android:id="@+id/PhoneNumber"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name1"
        tools:text="@string/PhoneHint" />

    <TextView
        android:id="@+id/MailAddress"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
        tools:text="@string/MailHint" />

    <TextView
        android:id="@+id/place"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailAddress"
        tools:text="@string/AddressHint" />

    <Button
        android:id="@+id/CallBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="電話"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/PhoneNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="@dimen/BackBtnWidth"
        android:layout_height="@dimen/BackBtnHeight"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/BackHint"
        android:textSize="@dimen/BackBtnTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/Delete"
        android:layout_width="@dimen/DeleteBtnWidth"
        android:layout_height="@dimen/DeleteBtnHeight"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/DeleteHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CardId"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="@dimen/TextHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place" />

</android.support.constraint.ConstraintLayout>